tests/negative/test_data_arr_not_def_init.orb
data Foo;

fnc main() {
    Foo[4] f;
}